--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,22 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: rgba(8, 30, 46, 1);
   --foreground: #171717;
 }
+
+
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-montserrat);
+  --font-mono: var(--font-inter);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: rgba(8, 30, 46, 1);
     --foreground: #ededed;
   }
 }
@@ -22,5 +24,50 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat";
+  position: relative;
+}
+body::before{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(180deg, #16161E 12.44%, rgba(24, 37, 56, 0.03) 100%);
+  z-index: -1;
+}
+
+
+.bg-main {
+  position: relative;
+  background: linear-gradient(180deg, rgba(22, 22, 30, 1) 0%, rgba(24, 37, 58, 0.03) 100%);
+  overflow: hidden;
+  z-index: 0;
+}
+.bg-main::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(180deg, rgba(40, 64, 82, 0) 0%, rgba(8, 30, 46, 1) 50%, rgba(28, 44, 63, 0.29) 100%);
+  z-index: -1;
+}
+.blur-circle {
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(60px);
+  z-index: -1;
+}
+
+.blur-one {
+  top: 20%;
+  left: 10%;
+  width: 200px;
+  height: 200px;
+  background-color: rgba(43, 112, 151, 1);
+}
+
+.blur-two {
+  bottom: 10%;
+  right: 15%;
+  width: 180px;
+  height: 180px;
+  background-color: rgba(43, 112, 151, 0.5);
 }
