--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: rgba(8, 30, 46, 1);
   --foreground: #171717;
 }
-
-
 
 @theme inline {
   --color-background: var(--background);
@@ -24,17 +22,16 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   position: relative;
 }
-body::before{
-  content: "";
+body::before {
+  content: '';
   position: absolute;
   inset: 0;
-  background: linear-gradient(180deg, #16161E 12.44%, rgba(24, 37, 56, 0.03) 100%);
+  background: linear-gradient(180deg, #16161e 12.44%, rgba(24, 37, 56, 0.03) 100%);
   z-index: -1;
 }
-
 
 .bg-main {
   position: relative;
@@ -43,10 +40,15 @@ body::before{
   z-index: 0;
 }
 .bg-main::after {
-  content: "";
+  content: '';
   position: absolute;
   inset: 0;
-  background: linear-gradient(180deg, rgba(40, 64, 82, 0) 0%, rgba(8, 30, 46, 1) 50%, rgba(28, 44, 63, 0.29) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(40, 64, 82, 0) 0%,
+    rgba(8, 30, 46, 1) 50%,
+    rgba(28, 44, 63, 0.29) 100%
+  );
   z-index: -1;
 }
 .blur-circle {
